cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_2.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cbc_cksm.c:41: error: DEAD_STORE
  The value written to &out (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cbc_cksm.c:41:9: Write of unused value
39.       if (out != NULL) {
40.           l2c(tout0, out);
41.           l2c(tout1, out);
              ^
42.       }
43.       tout0 = tin0 = tin1 = tin[0] = tin[1] = 0;
